Add quality assurance tooling and pre-commit configuration
- Introduce Spotless, Checkstyle, and PMD for enforcement of coding standards.
- Configure pre-commit hooks for automated checks, including formatting, file validation, and Gradle tasks.
- Update `build.gradle` with plugin configurations for Spotless, Checkstyle, and PMD.
- Add `config/checkstyle/checkstyle.xml` and `config/pmd/pmd-rules.xml` for style and static analysis.
- Include pre-commit configuration (`.pre-commit-config.yaml`) to enforce consistent workflows.
- Enhance documentation with `DEVELOPMENT.md` and `CLEANUP_SUMMARY.md` reflecting setup and usage of tools.
- Minor updates to existing files for formatting consistency and compatibility.